<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="jp.takuji31.kanmoba.num24.IdlingResourceActivity"
    >
    <data>
        <variable
            name="viewModel"
            type="jp.takuji31.kanmoba.num24.IdlingResourceViewModel" />
    </data>

    <android.support.v4.widget.SwipeRefreshLayout
        app:isRefreshing="@={viewModel.loading}"
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:items="@{viewModel.artists}"
            />
    </android.support.v4.widget.SwipeRefreshLayout>
</layout>
